2011-08-26  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Reported by Jason Hecker:
	* usbasp.c (libusb_to_errno): Conditionalize some error codes
	that apparently are lacking on MinGW.

2011-08-25  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Fix warnings.
	* ser_avrdoper.c: add <stdlib.h> so exit() is declared.
	* usbtiny.c (usbtiny_open): provide an initializer to a
	"may be used uninitialized" variable (since GCC could not
	fully detect the logic behind).

2011-08-25  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: Add a check for FreeBSD's libusb-1.0
	compatible library that is found in libusb.a/.so on
	FreeBSD 8+.

2011-08-25  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Doug Springer, based on work by
	Wolfgang Moser, Ville Voipio, Hannes Weisbach
	patch #7486: Patch to add FT2232C/D, FT2232H, FT4232H,
	usbvid, usbpid, usbdev for USB support - Based on #7062
	* avrftdi.c: New file.
	* avrftdi.h: (Ditto.)
	* configure.ac: Add check for libftdi.
	* config_gram.y: Add AVRFTDI and per-programmer USB string
	keywords.
	* lexer.l: (Ditto.)
	* avrdude.conf.in: Add avrftdi and 2232HIO programmers.
	* pgm.h: Add USB parameters.
	* Makefile.am: Add avrftdi.c and avrftdi.h.
	* AUTHORS: Mention the new authors.
	* avrdude.1: Document the changes.
	* doc/avrdude.texi: (Ditto.)

2011-08-23  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #29585: Fix license
	* doc/avrdude.texi: Add FDL as an option to the licensing
	statement, as the savannah administration would like it
	that way.

2011-08-23  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Darell Tan:
	patch #7244: TPI bitbang implementation
	* bitbang.c: Add TPI bitbang stuff.
	* bitbang.h: (Ditto.)
	* avr.c: (Ditto.)
	* avr.h: (Ditto.)
	* pgm.c: (Ditto.)
	* pgm.h: (Ditto.)
	* serbb_posix.c: Wire bitbang_cmd_tpi into the struct pgm.
	* serbb_win32.c: (Ditto.)
	* par.c: (Ditto.)
	* doc/avrdude.texi: Document the TPI bitbang support.

2011-08-17  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
